# nexus-sec-proxy

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  Dockerfile  README.md  clippy.toml  compose.yaml  e2e.compose.yaml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: README.md  ci.yaml  docker.yaml  release.yaml  tag.yaml
crates/cache/: Cargo.toml
crates/cache/src/: error.rs  key.rs  lib.rs  moka.rs  scan.rs  tests.rs
crates/config/: Cargo.toml
crates/config/src/: env.rs  error.rs  lib.rs  model.rs  policy_file.rs  tests.rs  types.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: admin.rs  audit.rs  catalog.rs  classifier.rs  decisions.rs  docker.rs  gateway.rs  helm.rs  main.rs  requester.rs  responses.rs  scan.rs  scanner_db.rs  state.rs  tests.rs  time_utils.rs  tracing_setup.rs  trust_reports.rs
crates/proxy/src/classifier/: formats.rs  mod.rs
crates/security/: Cargo.toml
crates/security/examples/: policy_schema.rs
crates/security/src/: error.rs  external.rs  lib.rs  normalize.rs  osv.rs  severity.rs  target.rs  tests.rs  vulnerability.rs
crates/security/src/policy/: evaluator.rs  mod.rs  model.rs  parse.rs  traits.rs
crates/yandex-messenger/: Cargo.toml
crates/yandex-messenger/src/: lib.rs
docs/: releases.md
docs/adr/: 0001-nexus-owns-requester-authentication.md  0002-use-nexus-email-as-yandex-login.md  0003-verify-blocked-requests-with-nexus.md  0004-resolve-recipients-through-nexus-users.md  0005-resolve-docker-requesters-from-accepted-tokens.md  0006-messenger-delivery-is-observable-best-effort.md  0007-trust-reports-use-bearer-links.md  0008-fail-static-config-not-runtime-delivery.md  0009-messenger-has-build-and-runtime-activation.md
policy/: example.toml
schemas/: policy.schema.json
scripts/: bootstrap-e2e.sh  scanner-db-updater.sh
