[package]
name = "nexus-sec-proxy-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
moka.workspace = true
nexus-sec-proxy-security = { path = "../security" }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
