[package]
name = "nexus-sec-proxy-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
nexus-sec-proxy-security = { path = "../security" }
serde.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
