[package]
name = "nexus-sec-proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["yandex-messenger"]
yandex-messenger = ["dep:nexus-sec-proxy-yandex-messenger"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
futures-util.workspace = true
nexus-sec-proxy-cache = { path = "../cache" }
nexus-sec-proxy-config = { path = "../config" }
nexus-sec-proxy-security = { path = "../security" }
nexus-sec-proxy-yandex-messenger = { path = "../yandex-messenger", optional = true }
percent-encoding.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
